// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
.emotion-0 {
  background: lime;
  width: 20px;
  height: 20px;
}

<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  😀 😎 👍 💯
  <div
    className="emotion-0 emotion-1"
    color="lime"
  />
</button>
`;

exports[`Storyshots Button with text 1`] = `
.emotion-0 {
  background: lime;
  width: 20px;
  height: 20px;
}

<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
  <div
    className="emotion-0 emotion-1"
    color="lime"
  />
</button>
`;
